added ParFam as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ginn-lp"]
 	path = ginn-lp
 	url = https://github.com/nisalr/ginn-lp.git
+[submodule "parfam"]
+	path = parfam
+	url = https://github.com/Philipp238/parfam.git
